--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
-                "${command:pickArgs}"
+                "RESERVATION"
+                ,"QUERY"
             ]
         }
     ]
