--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,8 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
-                "RESERVATION"
-                ,"QUERY"
+                "CLIENT"
+                ,"SFPUSH"
             ]
         }
     ]
