add lookup on client

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,9 +11,11 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
+//                "RESERVATION"
+//                ,"QUERY"
                 "CLIENT"
                 ,"SFPUSH"
-            ]
+]
         }
     ]
 }
