--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "args": [
 //                "RESERVATION"
 //                ,"QUERY"
-                "AGENT"
+                "CLIENT"
                 ,"SFPUSH"
 ]
         }
