--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,8 @@
                 ,"QUERY"
 //                "CLIENT"
 //                ,"SFPUSH"
+//                "AGENCY"
+//                ,"SFPUSH"
 ]
         }
     ]
