--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
-                "RESERVATION"
+                "CRUISE"
+//                "RESERVATION"
                 ,"QUERY"
 //                "CLIENT"
 //                ,"SFPUSH"
