--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,11 +11,11 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
-                "CRUISE"
+//                "CRUISE"
 //                "RESERVATION"
-                ,"QUERY"
-//                "CLIENT"
-//                ,"SFPUSH"
+//                ,"QUERY"
+                "CLIENT"
+                ,"SFPUSH"
 //                "AGENCY"
 //                ,"SFPUSH"
 ]
