--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,7 @@
 //                "CLIENT"
 //                ,"SFPUSH"
                 "AGENCY"
+//                ,"QUERY"
                 ,"SFPUSH"
 ]
         }
