--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,11 +11,11 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
- //               "CRUISE"
-                "RESERVATION"
+                "CRUISE"
+  //              "RESERVATION"
                 ,"QUERY"
- //               "CLIENT"
- //               ,"SFPUSH"
+  //              "CLIENT"
+  //              ,"SFPUSH"
 //                "AGENT"
 //                "AGENCY"
 //                ,"QUERY"
